# lexion

./: .gitignore  Cargo.toml  grammar.txt  table.txt
compiler_derive/: Cargo.toml
compiler_derive/src/: lib.rs
grammars/: calc.json  calyx.grm  expression.grm  grm.json  lalr1_example.json
lexion_derive/: Cargo.toml
lexion_derive/src/: fq.rs  lib.rs
lexion_lang/: Cargo.toml  build.rs
lexion_lang/grammar/: lexion.grm  lexion.json
lexion_lang/src/: compiler.rs  diagnostic.rs  lib.rs  main.rs  operators.rs  parser.rs  pipeline.rs  symbol_table.rs  symbol_table_generator.rs  type_checker.rs  validator.rs
lexion_lang/src/ast/: ast.rs  expr.rs  mod.rs  sourced.rs  stmt.rs  types.rs  visitor.rs
lexion_lang/src/generators/: label.rs  mod.rs
lexion_lang/src/generators/tac/: instructions.rs  mod.rs  tac.rs
lexion_lang/src/generators/x86/: memory_layout.rs  mod.rs  register_allocator.rs  x86.rs
lexion_lang/src/generators/x86/calling_convention/: calling_convention.rs  mod.rs  system_v.rs
lexion_lang/src/type_checker/: mod.rs  operator_table.rs  type_checker.rs
lexion_lang/src/typechecker/: error.rs  mod.rs  symbol_table.rs  typechecker.rs
lexion_lang/tests/: addition.lex  compile_err.rs  compile_ok.rs  fibonacci.lex  function.txt  liveness.lex
lexion_lang/tests/common/: mod.rs
lexion_lang/tests/fixtures/: control_flow.lex  functions.lex  structs.lex  variables.lex
lexion_lang/tests/fixtures/errors/: type_mismatch.lex  undefined_var.lex
lexion_lib/: Cargo.toml
lexion_lib/lexion_derive/: Cargo.toml
lexion_lib/lexion_derive/src/: fq.rs  lib.rs  serialize.rs
lexion_lib/src/: error.rs  lib.rs  main.rs  parser.rs
lexion_lib/src/ext/: petgraph.rs
lexion_lib/src/grammar/: derivation.rs  grammar.rs  mod.rs  serialize.rs  tests.rs
lexion_lib/src/parsers/: lalr1.rs  ll1.rs  lr.rs  lr0.rs  mod.rs  slr1.rs  table.rs  tests.rs
lexion_lib/src/parsers/items/: graph.rs  lr.rs  lr0.rs  mod.rs
lexion_lib/src/parsers/snapshots/: lexion_lib__parsers__tests__lalr1_table_snapshot_trivial_grammar.snap  lexion_lib__parsers__tests__slr1_table_snapshot_simple_grammar.snap
lexion_lib/src/tokenizer/: location.rs  mod.rs  span.rs  tests.rs  token.rs  tokenizer.rs  tokens.rs
lexion_parsers/: Cargo.toml
lexion_parsers/src/: grm.rs  lib.rs  tests.rs
lexion_parsers/tests/: function.txt
src/: main.rs
src/lib/: error.rs  mod.rs
src/lib/grammar/: derivation.rs  grammar.rs
src/lib/parsers/: lalr1.rs  ll1.rs  lr.rs  lr0.rs  mod.rs  slr1.rs  table.rs
src/lib/parsers/items/: graph.rs  lr.rs  lr0.rs  mod.rs
src/lib/tokenizer/: error.rs  location.rs  mod.rs  token.rs  tokenizer.rs
src/tests/: grm.rs  json.rs  mod.rs
tests/: source.txt
