[package]
name = "compiler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
colored = "2.0.0"
itertools = "0.10.5"
lazy-regex = "2.5.0"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
recur-fn = "2.2.0"
regex = "1.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
