[package]
name = "lexion_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full", "extra-traits"] }
quote = "1.0.33"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
proc-macro2 = "1.0.67"
regex = "1.9.6"
lexion_lib = { path = "../lexion_lib" }
