[package]
name = "lexion_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
colored = "2.0.0"
itertools = "0.13.0"
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
regex = "1.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
petgraph = "0.6.5"
miette = "7.2.0"
